--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=5000
-DB_HOST=mongodb://krowdy:krowdy@localhost:27017/bootcamp?authSource=admin
+# DB_HOST=mongodb://krowdy:krowdy@localhost:27017/bootcamp?authSource=admin
+
+DB_HOST=mongodb+srv://nitsuga_bat:G76FWVHLRgZrR3PS@vegas.ppklho6.mongodb.net/test
