--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cheerio": "^1.0.0-rc.11",
     "dayjs": "^1.11.2",
     "dotenv": "^16.0.0",
+    "ffmpeg": "^0.0.4",
     "joi": "^17.6.0",
     "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
